Refactor: Przemieszczam klasy dto do odzielnej paczki